# checkbitexts

./: CMakeLists.txt  README.md  cbuild.sh
src/: .tools.cpp.kate-swp  bitexts.cpp  bitexts.h  tools.cpp  tools.h
test/: CMakeLists.txt  main.cpp
